<resources>
    <string name="app_name">ProjetTigran</string>
    <string name="clean">Clean</string>
    <string name="reverse">Reverse</string>
    <string name="compare">Compare</string>
    <string name="palindrome">Palindrome</string>
    <string name="item_random_palindrome">Palindrome aléatoire</string>
    <string name="question_palindrome">Qu\'est ce qu\'un palindrome ?</string>
    <string name="random_sentence">Phrase aléatoire</string>
    <string name="a_propos">A propos ...</string>
    <string name="perec_palindrome_wiki">La palindrome de Perec</string>
    <string name="add_a_sentence">Add a sentence</string>
    <string name="add_a_palindrome">Add a palindrome</string>
    <string name="show_files_content">Show files content</string>
    <string name="show_sentences">Show sentences</string>
    <string name="show_palindromes">Show palindromes</string>
    <string name="copyright">Copyright Tigran SLAMA</string>
    <string name="version_and_date">Version 1.0 du 24/01/2022</string>
</resources>