<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".component.activities.RegisterActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/sentence_input"/>
        <Button
                android:text="@string/add_a_palindrome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_palindrome_button"
                android:onClick="add_palindrome"
        />
        <Button
                android:text="@string/add_a_sentence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_sentence_button"
                android:onClick="add_sentence"
        />
        <Button
                android:text="@string/show_files_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/show_files_content_button"
                android:onClick="showFileSentence"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>