<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.PalindromeActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/enter_palindrome_editText"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp" android:id="@+id/palindrome_textView"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp" android:id="@+id/palindrome_reverse_textView"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:text="@string/clean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/clean_button" android:layout_weight="1"
                    android:onClick="clean"
            />
            <Button
                    android:text="@string/reverse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/reverse_button" android:layout_weight="1"
                    android:onClick="reverse"
            />
            <Button
                    android:text="@string/compare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/compare_button" android:layout_weight="1"
                    android:onClick="compare"
            />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>